--- a/portefolio/css/style.css
+++ b/portefolio/css/style.css
@@ -306,20 +306,21 @@ body {
     font-size: 0;
     width: 100%; }
     body #about .img {
-      width: 50%;
+      width: calc(100% - 520px);
       display: inline-block;
       vertical-align: middle;
       position: relative;
       height: 100%; }
       body #about .img img {
-        width: 80%;
+        width: 65%;
         margin: 0 auto;
         display: block;
         position: absolute;
         top: 50%;
-        transform: translateY(-50%); }
+        left: 50%;
+        transform: translate(-50%, -50%); }
     body #about .description {
-      width: 50%;
+      width: 520px;
       vertical-align: middle;
       display: inline-block; }
       body #about .description h2 {
