--- a/portefolio/css/slider.scss
+++ b/portefolio/css/slider.scss
@@ -3,65 +3,32 @@
 ================================================== */
 @import 'mixin.scss';
 @import 'font.scss';
+@import 'resetcss.scss';
+
+
+html,
+.body {
+    width: 100%;
+     height:100%;
+}
 
 
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
 .wrapper {
-    width:100%;
-    margin: auto;
-    height: 450px;
-    overflow: hidden;
-    position: relative;
+  width:100%;
+  margin: auto;
+  background: grey;
+    height: 445px;
+  overflow: hidden;
+position: relative;
+
 }
 
 .slider {
-    height: 100%;
-    position: absolute;
-}
+  height: 100%;
+  position: absolute;
 
+}
 .arrow {
     position: absolute;
     font-size: 20px;
@@ -79,6 +46,11 @@ table {
 }
 .direction:hover {
     cursor:pointer;
+}
+.item {
+  float:left;
+  height: 100%;
+
 }
 
 .item-info {
@@ -99,7 +71,7 @@ table {
 .item-info-container {
     float:left;
     width: 475px;
-    background: #000;
+    background: #681313;
     height:100%;
 }
 .item-image-container {
@@ -107,6 +79,12 @@ table {
     width: calc(100% - 475px);
     height:100%;
 }
+.slider-module-2 .item-image-container {
+    float:left;
+    width: 100%;
+    height:100%;
+}
+
 .item-image-container img{
     height:auto;
     width: 100%;
