--- a/portefolio/css/slider.css
+++ b/portefolio/css/slider.css
@@ -73,8 +73,7 @@ html,
 .wrapper {
   width: 100%;
   margin: auto;
-  background: grey;
-  height: 445px;
+  height: 600px;
   overflow: hidden;
   position: relative; }
 
@@ -118,15 +117,9 @@ html,
   line-height: 1em;
   margin: 30px 0 10px; }
 
-.item-info-container {
-  float: left;
-  width: 475px;
-  background: #681313;
-  height: 100%; }
-
 .item-image-container {
   float: left;
-  width: calc(100% - 475px);
+  width: 100%;
   height: 100%; }
 
 .slider-module-2 .item-image-container {
