--- a/portefolio/css/style.css
+++ b/portefolio/css/style.css
@@ -69,7 +69,7 @@ table {
     Page d'acceuil    
 ================================================== */
 body {
-  height: 1500px; }
+  background: #eee; }
   body .engl {
     display: none; }
   body .name {
@@ -315,5 +315,121 @@ body {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%); }
+
+.container-main {
+  margin: 0 auto;
+  max-width: 1280px;
+  min-width: 990px;
+  padding: 0 4%;
+  position: relative; }
+
+h2 {
+  font-weight: bold;
+  font-size: 24px;
+  margin-bottom: 20px; }
+
+.strip {
+  margin: 0 0 20px;
+  width: 100%;
+  height: 350px;
+  font-size: 0; }
+  .strip .three.tile.number1 .container {
+    padding: 0 13.333px 0 0; }
+  .strip .three.tile.number2 .container {
+    padding: 0px 6.66px 0px 6.66px; }
+  .strip .three.tile.number3 .container {
+    padding: 0 0 0 13.333px; }
+  .strip .tile {
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%; }
+    .strip .tile.three {
+      width: calc(100% / 3); }
+    .strip .tile.one {
+      width: 100%; }
+      .strip .tile.one .container {
+        width: 100%; }
+      .strip .tile.one .content {
+        width: 100%;
+        padding: 0; }
+        .strip .tile.one .content .info {
+          padding: 20px;
+          margin: 0; }
+      .strip .tile.one .image img {
+        width: auto;
+        height: 100%; }
+    .strip .tile .container {
+      overflow: hidden;
+      position: relative;
+      height: 100%; }
+    .strip .tile .image {
+      overflow: hidden;
+      width: 100%;
+      position: relative; }
+      .strip .tile .image img {
+        width: 100%;
+        height: auto; }
+      .strip .tile .image .mask {
+        background: transparent;
+        background: -moz-radial-gradient(center, ellipse cover, transparent 0%, black 100%);
+        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, transparent), color-stop(100%, black));
+        background: -webkit-radial-gradient(center, ellipse cover, transparent 0%, black 100%);
+        background: -o-radial-gradient(center, ellipse cover, transparent 0%, black 100%);
+        background: -ms-radial-gradient(center, ellipse cover, transparent 0%, black 100%);
+        background: radial-gradient(ellipse at center, transparent 0%, black 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=1 );
+        bottom: 0;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 100%;
+        opacity: 0.1; }
+      .strip .tile .image.height70 {
+        height: 70%; }
+      .strip .tile .image.height100 {
+        height: 100%; }
+      .strip .tile .image.width50 {
+        width: 50%;
+        display: inline-block; }
+    .strip .tile .content {
+      background: #fff;
+      padding: 20px;
+      position: relative;
+      font-size: 16px;
+      line-height: 1.1em; }
+      .strip .tile .content.height30 {
+        height: 30%; }
+      .strip .tile .content.height100 {
+        height: 100%; }
+      .strip .tile .content.width50 {
+        width: 50%;
+        display: inline-block;
+        vertical-align: top; }
+      .strip .tile .content img {
+        position: absolute;
+        top: -35px;
+        width: 150px; }
+      .strip .tile .content .info {
+        margin-left: 150px; }
+        .strip .tile .content .info h3 {
+          font-weight: bold;
+          font-size: 18px;
+          margin-bottom: 15px; }
+        .strip .tile .content .info .tag {
+          font-weight: bold;
+          color: #b5b2b2;
+          margin-bottom: 5px; }
+        .strip .tile .content .info p {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis; }
+    .strip .tile:hover {
+      cursor: pointer; }
+      .strip .tile:hover .image .mask {
+        opacity: 0.3; }
+      .strip .tile:hover .content {
+        background: #eee; }
 
 /*# sourceMappingURL=style.css.map */
