--- a/portefolio/css/style.scss
+++ b/portefolio/css/style.scss
@@ -13,7 +13,7 @@
 
 
 body {
-height: 1500px;
+background: #eee;
 	.engl {
 		display: none;
 	}
@@ -248,6 +248,162 @@ height: 1500px;
 				top: 50%;
 				left: 50%;
 				transform: translate(-50%, -50%);
+			}
+		}
+	}
+}
+.container-main {
+ 	margin: 0 auto;
+    max-width: 1280px;
+    min-width: 990px;
+    padding: 0 4%;
+    position: relative;
+}
+h2 {
+	font-weight: bold;
+	font-size: 24px;
+	margin-bottom: 20px;
+}
+.strip {
+	margin: 0 0 20px;
+	width: 100%;
+	height: 350px;
+	font-size: 0;
+
+	.three.tile.number1 .container {
+		padding: 0 13.333px 0 0;
+	}
+	.three.tile.number2 .container {
+		padding: 0px 6.66px 0px 6.66px;
+	
+	}
+	.three.tile.number3 .container  {
+		padding: 0 0 0 13.333px;
+	
+	}
+	.tile {
+		display: inline-block;
+		vertical-align: middle;
+		height:100%;
+		
+		&.three {
+			width: calc(100% / 3);
+		}
+		&.one {
+			width: 100%;
+			.container {
+				width: 100%;
+			
+			}
+			.content {
+				width: 100%;
+				padding: 0;
+				.info {
+					padding: 20px;	
+					margin: 0;
+				}
+				
+			}
+			.image {
+				img {
+					width:auto;
+					height: 100%;
+				}	
+			}
+		}
+		.container {
+			overflow: hidden;
+			position: relative;
+			height:100%;
+		}
+		.image {
+			overflow: hidden;
+			width: 100%;
+			position: relative;
+			img {
+				width: 100%;
+				height: auto;
+			}
+			.mask {
+				background: rgba(0,0,0,0);
+				background: -moz-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+				background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,1)));
+				background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+				background: -o-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+				background: -ms-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+				background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=1 );	
+			   	bottom: 0;
+				height: 100%;
+				left: 0;
+				position: absolute;
+				right: 0;
+    			top: 0;
+    			width: 100%;
+				opacity:0.1;
+			}
+			&.height70 {
+				height: 70%;
+			}
+			&.height100 {
+				height: 100%;
+			}
+			&.width50 {
+				width: 50%;	
+				display: inline-block;
+				
+			}
+
+		}
+		.content {
+			background: #fff;
+			padding: 20px;
+			position: relative;
+			font-size: 16px;
+			line-height: 1.1em;
+			&.height30 {
+				height: 30%;
+			}
+			&.height100{
+				height: 100%;	
+			}
+			&.width50 {
+				width: 50%;	
+				display: inline-block;
+				vertical-align: top;
+			}
+			img {
+				position: absolute;
+				top: -35px;
+				width: 150px;
+			}
+			.info{
+				margin-left: 150px;
+				h3 {
+					font-weight: bold;
+					font-size: 18px;
+					margin-bottom: 15px;
+					
+				}
+				.tag {
+					font-weight: bold;
+					color: #b5b2b2;
+					margin-bottom: 5px;
+				}
+				p {
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis
+				}
+			}
+		}
+		&:hover {
+			cursor: pointer;
+			.image .mask {
+				opacity : 0.3;
+			}
+			.content {
+				background: #eee;
 			}
 		}
 	}
